# toktagger

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  api.dockerfile  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.toml  requirements.txt  toktagger.example.toml  zensical.toml
.github/workflows/: ci.yml  deploy_docs.yml  publish.yml
annotators/: index.html
configs/: local.toml  mast.toml
creating_projects/: index.html
custom_dataloaders/: index.html
custom_models/: index.html
data/test/summary/: 12386.parquet  14892.parquet  17737.parquet  30421.parquet
data_loaders/: index.html
dev/API-Design/: index.html
dev/Context-Menu-Provider/: index.html
dev/Providers/: index.html
dev/System-Architecture/: index.html
dev/User-Interface-Details/: index.html
dev/User-Interface-Overall-Design/: index.html
dev/User-Interface-Planning/: index.html
dev/building-the-docs/: index.html
dev/developer-setup/: index.html
dev/tests/: index.html
docs/: annotators.md  configuration.md  creating_projects.md  custom_dataloaders.md  custom_models.md  data_loaders.md  index.md  profile_2d.md  spectrogram.md  time_series.md  user_management.md  video.md
docs/dev/: API-Design.md  Context-Menu-Provider.md  Providers.md  System-Architecture.md  User-Interface-Details.md  User-Interface-Overall-Design.md  User-Interface-Planning.md  building-the-docs.md  custom-data-loaders.md  developer-setup.md  tests.md
scripts/: build_dataset.py  create_mock_data.py  full_setup.py  generate_example_config.py  requirements.txt  setup.py  test_sal.py
search/: search_index.json
services/api/: __init__.py  cli.py  listener.py  main.py  publisher.py  worker.py
services/api/core/: annotators.py  data_loaders.py  models.py  project.py  query_strategy.py  sender.py  views.py
services/api/crud/: db.py  listener.py  mongita_client.py  utils.py
services/api/models/: __init__.py  base.py  callback.py  disruption.py  registry.py
services/api/routers/: annotations.py  annotators.py  data.py  files.py  models.py  projects.py  samples.py
services/api/schemas/: __init__.py  annotations.py  annotators.py  data.py  models.py  projects.py  samples.py  views.py
services/api/static/: index.html
services/common/core/: celery_app.py  data_loaders.py  publisher.py  sender.py
services/common/models/: __init__.py  base.py  callback.py  disruption.py  registry.py
services/common/schemas/: annotations.py  models.py  projects.py  (+2 more)
services/data_api/: main.py  model_runner.py
services/ui/: .prettierignore  App.jsx  Dockerfile  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  vite.config.js
services/worker/: main.py  worker.py
tests/: 10001.parquet  conftest.py  db_definitions.py  endpoints.py  models_definitions.py  models_fixtures.py  multiple_arrs.npz  rgb_arr.npz  single_arr.npy  single_arr.npz  test.csv  test.parquet
tests/end_to_end/: __init__.py  test_disruption_page.py  test_preprocessing_page.py  test_projects_page.py  test_sample_view_navigation.py  test_sample_view_page.py  test_samples_page.py  test_timeseries_page.py
time_series/: index.html
toktagger/: __init__.py
toktagger/api/: asgi.py  cli.py  config.py  main.py  run.py  worker.py
toktagger/data_api/: data_pool.py  main.py
toktagger/ui/: .prettierignore  App.jsx  Dockerfile  eslint.config.mjs  index.html  main.jsx  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
toktagger_db/annotate_db/: $.metadata
(+689 files in other folders)
