[project]
name = "toktagger"
version = "2025.0.0"
requires-python = ">=3.11"
authors = [
]
maintainers = [
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "fastapi",
  "uvicorn",
  "fsspec",
  "xarray",
  "s3fs",
  "zarr>=3.0.0",
  "scipy",
  "pyarrow",
  "pymongo",
  "requests",
  "numpy>=2.2.0,<=2.2.6",
  "scikit-learn",
  "celery[redis]",
  "pillow",
  "uda",
  "sal",
  "toksearch @ git+https://github.com/GA-FDP/toksearch",
  "pytest",
  "mkdocs",
  "mkdocs-material",
  "mongita>=1.2.0",
  "filelock>=3.19.1",
  "psutil>=7.0.0",
  "ray>=2.49.1",
  "pyspark>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services.api*"]

[tool.setuptools.package-data]
"services.api" = ["static/**/*"]

[tool.ruff]
exclude = [".venv", "notebooks"]

[dependency-groups]
dev = [
    "pooch>=1.8.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
    "ruff>=0.12.9",
    "pre-commit>=4.3.0",
]

[project.scripts]
toktagger = "services.api.cli:main"
