[project]
name = "toktagger"
version = "2025.0.0"
requires-python = ">=3.9,<3.14"
authors = [
]
maintainers = [
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "fastapi",
  "uvicorn",
  "fsspec",
  "xarray",
  "s3fs",
  "zarr",
  "scipy",
  "pyarrow<21",
  "pymongo",
  "requests",
  "numpy<2",
  "scikit-learn",
  "celery[redis]",
  "pillow",
  "uda",
  "pytest",
  "mkdocs",
  "mkdocs-material",
  "mongita>=1.2.0",
  "filelock>=3.19.1",
  "ruptures>=1.1.10",
  "hmmlearn>=0.3.3",
  "torch>=2.8.0",
  "ray>=2.51.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toktagger.api*"]

[tool.setuptools.package-data]
"toktagger.api" = ["static/**/*"]

[tool.ruff]
exclude = [".venv", "notebooks"]

[dependency-groups]
dev = [
    "pooch>=1.8.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
    "ruff>=0.12.9",
    "pre-commit>=4.3.0",
]

[project.scripts]
toktagger = "toktagger.api.cli:main"
