[project]
name = "toktagger"
version = "0.1.1"
requires-python = ">=3.9,<3.14"
authors = [
]
maintainers = [
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "fastapi",
  "uvicorn",
  "fsspec",
  "xarray",
  "s3fs",
  "zarr",
  "scipy",
  "pyarrow<21",
  "pymongo",
  "requests",
  "numpy<2",
  "scikit-learn",
  "pandas<=2.2.3",
  "pillow",
  "uda",
  "sal",
  "ruptures>=1.1.10",
  "psutil>=7.0.0",
  "mongita>=1.2.0",
  "filelock>=3.19.1",
  "hmmlearn>=0.3.3",
  "uda-xarray>=0.2.1",
  "sal-xarray>=0.2.1",
  "bump-my-version>=1.2.7",
  "platformdirs>=4.4.0",
  "itsdangerous>=2.0.0",
]
[project.optional-dependencies]
models = [
  "torch",
  "ray>=2.49.1",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["toktagger.api*"]

[tool.setuptools.package-data]
"toktagger.api" = ["static/**/*"]

[tool.ruff]
exclude = [".venv", "notebooks"]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "pooch>=1.8.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "testcontainers>=4.12.0",
    "ruff>=0.12.9",
    "pre-commit>=4.3.0",
    "pytest-playwright>=0.7.1",
]

[project.scripts]
toktagger = "toktagger.api.cli:main"
